--- a/src/app/craft-list/craft-list.component.scss
+++ b/src/app/craft-list/craft-list.component.scss
@@ -18,6 +18,7 @@
   margin: 0 auto; 
   margin-top: 20px;
   margin-bottom: 20px;
+  border-color: black;
 }
 
 
@@ -57,39 +58,3 @@
 }
 
 
-.dropbtn {
-  background-color: #f9f9f9; 
-  color: black;
-
-  font-size: 16px;
-  border: none;
- 
-  
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
- 
-  text-decoration: none;
-  display: block;
-}
-
-//.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #06180783;}
