--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,13 @@
-<p>cart works!</p>
+<!-- cart.component.html -->
+<div *ngIf="cartItems.length > 0; else emptyCart">
+  <ul>
+    <li *ngFor="let item of cartItems">
+      <img [src]="item.imageUrl" alt="{{ item.title }}" />
+      <h3>{{ item.title }}</h3>
+      <p>{{ item.description }}</p>
+    </li>
+  </ul>
+</div>
+<ng-template #emptyCart>
+  <p>Your cart is empty.</p>
+</ng-template>
