--- a/src/app/craft-list/craft-list.component.scss
+++ b/src/app/craft-list/craft-list.component.scss
@@ -1,26 +1,41 @@
 .craft-list-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: space-around;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+  padding: 1rem;
+  background-color: #f5f5f5;
+}
 
-  
+.app-crafts {
+  background-color: #fff;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  width: calc(33.333% - 1rem);
+  margin: 0.5rem;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.app-crafts:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
 .search-bar {
   display: flex;
   align-items: center;
-  background-color: #f9f9f9; 
-  border-radius: 30px; 
-  border: 1px solid #ddd; 
-  padding: 5px 15px; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-  max-width: 350px; 
-  margin: 0 auto; 
+  background-color: #f9f9f9;
+  border-radius: 30px;
+  border: 1px solid black;
+  padding: 5px 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 350px;
+  margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 20px;
-  border-color: black;
 }
-
 
 .search-input {
   border: none;
@@ -28,33 +43,23 @@
   padding: 10px;
   font-size: 16px;
   border-radius: 30px;
-  width: 100%; 
-  background-color: transparent; 
-  color: #333; 
+  width: 100%;
+  background-color: transparent;
+  color: #333;
 }
 
-
 .search-icon {
-  color: black; 
+  color: black;
   font-size: 18px;
-  margin-left: 10px; 
-  cursor: pointer; 
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 .search-bar:hover {
-  border-color: black; 
+  border-color: black;
 }
 
 .search-bar .search-input::placeholder {
-  color: #aaa; 
+  color: #aaa;
 }
-
-.mat-snack-bar-container {
-  background-color: #323232; 
-  color: #fff; 
-  font-size: 14px;
-  border-radius: 4px;
-  padding: 12px;
-}
-
 
