--- a/src/app/crafts/crafts.component.html
+++ b/src/app/crafts/crafts.component.html
@@ -43,6 +43,8 @@
       }
     </div>
 
+    <div class="program-type">{{ craft.category }}</div>
+
     <!-- <h6 class="craft-category">{{ craft.category }}</h6> -->
 
     <div class="action-buttons-container">
@@ -72,10 +74,10 @@
         mat-icon-button
         aria-label="Like to movie"
         [matBadge]="like"
-        color="primary"
+        style="color: rgb(192, 17, 17)"
         (click)="likeIncrement()"
       >
-        <mat-icon>thumb_up</mat-icon>
+        <i class="fa-regular fa-thumbs-up"></i>
       </button>
 
       <button
