--- a/src/app/crafts/crafts.component.scss
+++ b/src/app/crafts/crafts.component.scss
@@ -37,9 +37,25 @@
 .action-buttons-container{
   display: flex;
   justify-content: space-between;
+  margin-top: 8px;
 }
 
 .craft-category{
     display: flex;
     justify-content: space-between;
 }
+
+.program-type {
+  color: #fff;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px 7px;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 8px;
+  background-color: #091112;
+  border-radius: 10px;
+  margin-top: 0px;
+}
+
