--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -19,7 +19,7 @@
 
   mat-card
 {
-  background-image: url(https://media.istockphoto.com/id/626841510/photo/watercolor-and-oil-paints-brushes-pencils-pastel-crayon-on-table.jpg?s=612x612&w=0&k=20&c=KCuyj8N6w5lpevhK_ILkmrmhByylBmW0dXC_PtJhwWI=);
+  background-image: url(https://t3.ftcdn.net/jpg/03/55/60/70/360_F_355607062_zYMS8jaz4SfoykpWz5oViRVKL32IabTP.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
