add cart template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,10 @@
       <li>
         <a routerLink="/courses"> Tutorials</a>
       </li>
+
+      <li>
+        <a routerLink="/cart">Cart</a>
+      </li>
     </div>
   </div>
 </ul>
