login and logout icons are added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,12 +38,16 @@
       ></a>
     </li>
     <div>
-      @if(!loginservice.loginSuccess){
+      @if(craftService.isToken == false){
       <li>
         <a routerLink="/loginUser"><i class="fa-solid fa-user"></i></a>
       </li>
       } @else {
-      <a (click)="logout()"><i class="fa-solid fa-right-from-bracket"></i></a>
+      <li>
+        <a (click)="logout()" routerLink="/"
+          ><i class="fa-solid fa-right-from-bracket"></i
+        ></a>
+      </li>
       }
       <li>
         <a routerLink="/courses"> Tutorials</a>
