--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,10 +52,11 @@
       <li>
         <a routerLink="/courses"> Tutorials</a>
       </li>
-
+      @if(craftService.isToken == true){
       <li>
         <a routerLink="/cart">Cart</a>
       </li>
+      }
     </div>
   </div>
 </ul>
