snack bars for cart are added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,7 @@
       <li>
         <a routerLink="/courses"> Tutorials</a>
       </li>
-      @if(craftService.isToken == true){
+      @if(craftService.isToken == true && roleId!=0){
       <li>
         <a routerLink="/cart">Cart</a>
       </li>
