--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -6,7 +6,7 @@
 />
 <h1 class="dialog-title">Confirm Action</h1>
 <div class="dialog-content">
-  <p>Are you sure you want to proceed with this action?</p>
+  <p>{{ data.message }}</p>
 </div>
 <div class="dialog-actions">
   <button class="dialog-button cancel-button" (click)="onCancel()">
